--- a/app/src/main/res/layout/spinner_text.xml
+++ b/app/src/main/res/layout/spinner_text.xml
@@ -4,4 +4,6 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:maxLines="1"
-    android:textColor="#000000" />
+    android:textColor="#000000"
+    android:textSize="30sp"
+    />
